@@ -38,7 +38,7 @@
  */
 
 /** \ingroup Group_USBClassAudio
- *  \defgroup Group_USBClassAudioDevice Audio Class Device Mode Driver
+ *  \defgroup Group_USBClassAudioDevice Audio 1.0 Class Device Mode Driver
  *
  *  \section Sec_Dependencies Module Source Dependencies
  *  The following files must be built with any user project that uses this module:
